objects/ServiceTerritoryMember.object
<CustomObject>
    <fields>
        <fullName>Active_Service_Resource__c</fullName>
        <formula>ServiceResource.IsActive</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Active Service Resource</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FSL__Internal_SLR_HomeAddress_Geolocation__c</fullName>
        <label>Internal SLR HomeAddress Geolocation</label>
        <scale>6</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>Member_Count__c</fullName>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Member Count</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Territory_Member_18_Digit_ID__c</fullName>
        <formula>CASESAFEID( Id )</formula>
        <label>Territory Member 18 Digit ID</label>
        <type>Text</type>
    </fields>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>FSL__Limit_STM_End_Date</fullName>
        <active>false</active>
        <errorConditionFormula>AND( NOT(ISBLANK(EffectiveEndDate)),
                                EffectiveEndDate &gt; ADDMONTHS(NOW(),36) )</errorConditionFormula>
        <errorMessage>End Date must be within 3 years from today</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>FSL__Secondary_STM</fullName>
        <active>false</active>
        <errorConditionFormula>(ISPICKVAL(TerritoryType, &quot;Secondary&quot;) &amp;&amp; 
    ( ( ( ISCHANGED(Longitude) || ISCHANGED(Latitude) ) &amp;&amp; ( (NOT(ISBLANK(Longitude))) || (NOT(ISBLANK(Latitude))) )) || 
      (NOT(ISBLANK(FSL__Internal_SLR_HomeAddress_Geolocation__Latitude__s))) || 
      (NOT(ISBLANK(FSL__Internal_SLR_HomeAddress_Geolocation__Longitude__s))) || 
      (NOT(ISBLANK( Street ))) || 
      (NOT(ISBLANK( City ))) ||
      (NOT(ISBLANK( Country ))) ||
      (NOT(ISBLANK( State ))) || 
      (NOT(ISBLANK(  PostalCode  )))
    )
 )</errorConditionFormula>
        <errorMessage>Cannot save Service Territory Member of type secondary with Operating Hours or Address</errorMessage>
    </validationRules>
</CustomObject>